--- a/app/src/main/res/layout/activity_add_recipe.xml
+++ b/app/src/main/res/layout/activity_add_recipe.xml
@@ -231,7 +231,8 @@
                 android:layout_marginStart="30dp"
                 android:layout_marginEnd="30dp"
                 android:autofillHints=""
-                android:inputType="textMultiLine" />
+                android:inputType="textMultiLine"
+                tools:ignore="LabelFor" />
 
 
         </LinearLayout>
