--- a/app/src/main/res/layout/main_search.xml
+++ b/app/src/main/res/layout/main_search.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="#FFFF0D0D"
     android:gravity="center_vertical"
     android:orientation="horizontal"
     android:padding="5dp">
@@ -25,7 +26,8 @@
         android:hint="@string/search"
         android:inputType="textPersonName"
         android:paddingStart="10dp"
-        android:paddingEnd="10dp" />
+        android:paddingEnd="10dp"
+        android:textColorHint="@android:color/black" />
 
 
 </LinearLayout>
