--- a/app/src/main/res/layout/recipe_row.xml
+++ b/app/src/main/res/layout/recipe_row.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginBottom="5dp"
+    android:layout_margin="5dp"
     app:cardCornerRadius="20dp">
 
     <ImageView
@@ -13,7 +13,6 @@
         android:layout_weight="1"
         android:contentDescription="@string/recipe_name_description"
         android:gravity="center"
-        android:padding="5dp"
         android:src="@drawable/ic_launcher_foreground" />
 
     <RelativeLayout
@@ -21,7 +20,6 @@
         android:layout_height="match_parent">
 
         <TextView
-
             android:id="@+id/recipe_title_TextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -33,5 +31,7 @@
             android:textColor="#000000"
             android:textSize="24sp"
             android:textStyle="bold" />
+
     </RelativeLayout>
+
 </androidx.cardview.widget.CardView>
